# src/CSharp/EasyMicroservices.OrderingMicroservice.Domain/Contracts/Requests/CreateOrderRequestContract.cs
@@ -1,13 +1,17 @@
-﻿using EasyMicroservices.Cores.Interfaces;
+﻿using EasyMicroservices.ContentsMicroservice.Clients.Attributes;
+using EasyMicroservices.Cores.Interfaces;
 using EasyMicroservices.Domain.DataTypes;
+using EasyMicroservices.OrderingMicroservice.Contracts.Common;
 using System.Collections.Generic;
 
 namespace EasyMicroservices.OrderingMicroservice.Contracts.Requests
 {
     public class CreateOrderRequestContract : IUniqueIdentitySchema
     {
-        public string Name { get; set; }
-        public string Description { get; set; }
+        [ContentLanguage]
+        public List<LanguageDataContract> Names { get; set; }
+        [ContentLanguage]
+        public List<LanguageDataContract> Descriptions { get; set; }
         public decimal Amount { get; set; }
         public CurrencyCodeType CurrencyCode { get; set; }
         public string UniqueIdentity { get; set; }
